k8s/istio/metrics/exercise/prom-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - prometheus.acme.com
  gateways:
  - prometheus
  http:
  - match:
    route:
    - destination:
        host: prometheus
        port:
          number: 9090

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - prometheus.acme.com
